# pyAstroApi

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  coverage.yml  publish-to-test-pypi.yml  test.yml
doc/: conf.py
doc/source/: api.rst  conf.py  development.rst  examples.rst  extrasref.rst  highlevelref.rst  index.rst  installation.rst  lowlevelref.rst  modules.rst  pyastroapi.api.rst  pyastroapi.rst
doc/source/_autosummary/: pyastroapi.api.citation_helper.rst  pyastroapi.api.export.rst  pyastroapi.api.http.rst  pyastroapi.api.libraries.rst  pyastroapi.api.metrics.rst  pyastroapi.api.recommender.rst  pyastroapi.api.reference.rst  pyastroapi.api.resolver.rst  pyastroapi.api.search.rst  pyastroapi.api.solr.rst  pyastroapi.api.stored.rst  pyastroapi.api.token.rst  pyastroapi.api.urls.rst  pyastroapi.api.utils.rst  pyastroapi.api.visualization.rst  pyastroapi.articles.rst  pyastroapi.extras.bibtex.rst  pyastroapi.extras.urls.rst  pyastroapi.libraries.rst  pyastroapi.search.rst
src/pyadsapi/: __init__.py  articles.py  libraries.py  search.py
src/pyadsapi/api/: author.py  citation_helper.py  exceptions.py  export.py  http.py  libraries.py  limits.py  metrics.py  objects.py  recommender.py  reference.py  resolver.py  search.py  token.py  urls.py  utils.py  visualization.py
src/pyastroapi/: __init__.py  articles.py  bibtex.py  libraries.py  search.py  urls.py
src/pyastroapi/api/: author.py  citation_helper.py  classic.py  exceptions.py  export.py  http.py  libraries.py  metrics.py  notifications.py  recommender.py  reference.py  resolver.py  search.py  solr.py  stored.py  token.py  urls.py  utils.py  visualization.py
src/pyastroapi/extras/: urls.py
src/pyastroapi/rss/: arxiv.py
tests/: test_api.py  test_astro.py  test_extras.py
tests/cassettes/: TestAPIAuthor.test_multi.yaml  TestAPIAuthor.test_one.yaml  TestAPICitations.test_multi.yaml  TestAPIClassic.test_mirrors.yaml  TestAPIClassic.test_user.yaml  TestAPIExport.test_aastex_1.yaml  TestAPIExport.test_aastex_2.yaml  TestAPIExport.test_ads.yaml  TestAPIExport.test_ads_1.yaml  TestAPIExport.test_ads_2.yaml  TestAPIExport.test_bib2.yaml  TestAPIExport.test_bibtex.yaml  TestAPIExport.test_bibtex_1.yaml  TestAPIExport.test_bibtex_2.yaml  TestAPIExport.test_bibtexabs_1.yaml  TestAPIExport.test_bibtexabs_2.yaml  TestAPIExport.test_csl_1.yaml  TestAPIExport.test_csl_2.yaml  TestAPIExport.test_custom.yaml  TestAPIExport.test_dcxml_1.yaml  TestAPIExport.test_dcxml_2.yaml  TestAPIExport.test_endnote_1.yaml  TestAPIExport.test_endnote_2.yaml  TestAPIExport.test_icarus_1.yaml  TestAPIExport.test_icarus_2.yaml  TestAPIExport.test_ieee_1.yaml  TestAPIExport.test_ieee_2.yaml  TestAPIExport.test_medlars_1.yaml  TestAPIExport.test_medlars_2.yaml  TestAPIExport.test_mnras_1.yaml  TestAPIExport.test_mnras_2.yaml  TestAPIExport.test_procite_1.yaml  TestAPIExport.test_procite_2.yaml  TestAPIExport.test_refabsxml_1.yaml  TestAPIExport.test_refabsxml_2.yaml  TestAPIExport.test_refworks_1.yaml  TestAPIExport.test_refworks_2.yaml  TestAPIExport.test_refxml_1.yaml  TestAPIExport.test_refxml_2.yaml  TestAPIExport.test_ris_1.yaml  (+100 more)
