[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=7.1.0"]
# Python 3.7 doesnt go above 7.1.0

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-s"

[tool.setuptools_scm]

[project]
name = "pyastroapi"
authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]
description = "Low level library interfacing with NASA's ADSABS api"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
]

dependencies = [
    "requests",
    "setuptools_scm",
    "feedparser",
    "bibtexparser",
]

dynamic = ["version"]


[project.optional-dependencies]
test = ['pytest','pytest-vcr','vcrpy']
dev = ['pre-commit','black']