[metadata]
name = pyadsapi
description = "Low level library interfacing with NASA's ADSABS api"
long_description = file: README.md
author = Robert Farmer
license = BSD
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research

[options]
install_requires =
    requests>=2
python_requires = >=3.6

zip_safe = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pyadsapi = py.typed

[flake8]
max-line-length = 160