[metadata]
name = pyastroapi
description = "Low level library interfacing with NASA's ADSABS api"
long_description = file: README.md
author = Robert Farmer
author_email = robert.j.farmer37@gmail.com
license = BSD
long_description_content_type = 'text/markdown'
license_file = LICENSE
url = https://github.com/rjfarmer/pyAstroApi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research

[options]
install_requires =
    requests>=2
python_requires = >=3.7

zip_safe = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=.0
    mypy>=0.910
    tox>=3.24
    pytest-vcr
    vcrpy

[options.package_data]
pyadsapi = py.typed
